forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: ssh
      port: 2222
      targetPort: 2222
  type: ClusterIP
