forgejo/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: forgejo-gateway
  namespace: forgejo
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: forgejo-cert
      hosts:
        - git.local.gwg313.xyz
        - git.gwg313.xyz
        - git.zerotier.gwg313.xyz
